# docs/swagger.yaml
@@ -26,9 +26,11 @@ definitions:
         type: string
       maxSalary:
         example: 70000
+        minimum: 0
         type: number
       minSalary:
         example: 50000
+        minimum: 0
         type: number
       notes:
         example: Follow up in two weeks
@@ -241,6 +243,77 @@ definitions:
       user:
         $ref: '#/definitions/models.ProfileResBody'
     type: object
+  models.UpdateJobApplicationReqBody:
+    properties:
+      companyName:
+        example: Evil Corp Inc.
+        type: string
+      dateApplied:
+        example: "2025-03-14T12:34:56Z"
+        type: string
+      isReplied:
+        example: false
+        type: boolean
+      jobPostingURL:
+        example: https://glassbore.com/jobs/swe420692137
+        type: string
+      jobTitle:
+        example: Software Engineer
+        type: string
+      maxSalary:
+        example: 70000
+        minimum: 0
+        type: number
+      minSalary:
+        example: 50000
+        minimum: 0
+        type: number
+      notes:
+        example: Follow up in two weeks
+        type: string
+      status:
+        allOf:
+        - $ref: '#/definitions/db.Status'
+        enum:
+        - IN_PROGRESS
+        - REJECTED
+        - ACCEPTED
+        example: IN_PROGRESS
+    type: object
+  models.UpdateJobApplicationResBody:
+    properties:
+      companyName:
+        example: Evil Corp Inc.
+        type: string
+      dateApplied:
+        example: "2025-03-14T12:34:56Z"
+        type: string
+      id:
+        example: f4d15edc-e780-42b5-957d-c4352401d9ca
+        type: string
+      isReplied:
+        example: false
+        type: boolean
+      jobPostingURL:
+        example: https://glassbore.com/jobs/swe420692137
+        type: string
+      jobTitle:
+        example: Software Engineer
+        type: string
+      maxSalary:
+        example: 70000
+        type: number
+      minSalary:
+        example: 50000
+        type: number
+      notes:
+        example: Follow up in two weeks
+        type: string
+      status:
+        allOf:
+        - $ref: '#/definitions/db.Status'
+        example: IN_PROGRESS
+    type: object
   models.VerifyEmailReqBody:
     properties:
       verificationToken:
@@ -434,6 +507,37 @@ paths:
       security:
       - BearerAuth: []
       summary: Retrieve job application details
+      tags:
+      - Job application
+    put:
+      consumes:
+      - application/json
+      description: Updates an existing job application with the provided details
+      parameters:
+      - description: Job application details
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/models.UpdateJobApplicationReqBody'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.UpdateJobApplicationResBody'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.Error'
+      security:
+      - BearerAuth: []
+      summary: Update a job application
       tags:
       - Job application
   /password/reset:
